--- a/platforms/ios/www/partials/stories.html
+++ b/platforms/ios/www/partials/stories.html
@@ -1,21 +1,11 @@
 <div class="col-md-12  col-xs-12 story" ng-show="stories" ng-repeat="story in stories">
-    <div class="col-md-12  col-xs-12 story-header">
-        <div class=" col-md-offset-8 col-xs-offset-8 col-md-2 col-xs-2">
-            {{story.points}}pts
-        </div>
-        <!--
-        <div class="col-md-2 col-xs-2 story-header">
-            <img src="img/ruban.png" height="50"/>
-        </div>
-        -->
-    </div>
    <div class="story-header author col-md-1 col-md-offset-1 col-xs-2 col-xs-offset-1">
         <a ng-href="#/profile/{{story.parts[0].author._id}}">
             <img ng-src="{{story.parts[0].author.avatar}}" on-error-src="img/default.png"/>
         </a>
     </div>
     <div class="col-md-9 col-xs-8 story-header">
-        <a ng-href="#/story/{{story._id}}"><h3>{{story.title}}</h3></a>
+        <a ng-href="#/story/{{story._id}}" class="col-md-12 col-xs-12"><h3>{{story.title}}</h3></a>
     </div>
     <div class="col-md-12 col-xs-12 preview" ng-class="{'preview-full':story.expand}">
         <div  ng-repeat="part in story.parts">
@@ -96,16 +86,19 @@
     </div>
     <!-- FOOTER -->
     <div class="col-md-12  col-xs-12">
-        <div class="col-md-3 col-xs-3 story-footer">
+        <div class="col-md-2 col-sm-2 col-xs-4 story-footer">
             <a ng-click="voting(story,1)"><i class="glyphicon glyphicon-thumbs-up" ng-class="{'voted':story.votes[0].value == 1}" ></i></a>
         </div>
-        <div class="col-md-3 col-xs-3 story-footer">
+        <div class="col-md-2 col-sm-2 col-xs-4 story-footer">
+            {{story.points}}pts
+        </div>
+        <div class="col-md-2 col-sm-2 col-xs-4 story-footer">
             <a ng-click="voting(story,-1)"><i class="glyphicon glyphicon-thumbs-down" ng-class="{'voted':story.votes[0].value == -1}" ></i></a>
         </div>
-        <div class="col-md-2 col-xs-2 story-footer">
+        <div class="col-md-2 col-sm-2 col-xs-4 story-footer">
             <a href="#/story/{{story._id}}"><i class="glyphicon glyphicon-comment" ></i></a>
         </div>
-        <div class="col-md-2 col-xs-2 story-footer dropup">
+        <div class="col-md-2 col-sm-2 col-xs-4 story-footer dropup">
             <a class="dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-expanded="true">
                 <i class="fa fa-share-alt" ></i>
             </a>
@@ -134,6 +127,6 @@
 <div class="col-md-12  col-xs-12 center" ng-show="stories&&stories.length>0" >
     <a ng-click="increaseOffset()" class="btn-bubble"><i class="glyphicon glyphicon-refresh"></i></a>
 </div>
-<div class="col-md-12  col-xs-12 loading" ng-show="!stories||stories.length==0" >
+<div class="col-md-12  col-xs-12 loading" ng-show="!stories || stories.length==0" >
     <img src="img/loading.gif"/>
 </div>
